--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -25,7 +25,7 @@
             <Setter Property="Template">
                 <Setter.Value>
                     <ControlTemplate TargetType="Button">
-                        <Grid Margin="0,3,0,-3">
+                        <Grid Margin="0,3,0,3">
                             <Rectangle Height="56" Stroke="Black" Width="85" RenderTransformOrigin="0.5,0.5" RadiusX="3.925" RadiusY="3.925" StrokeThickness="0.4" Fill="#FFB7A899">
                                 <Rectangle.RenderTransform>
                                     <CompositeTransform Rotation="0"/>
@@ -37,10 +37,39 @@
                 </Setter.Value>
             </Setter>
         </Style>
+        <Style x:Key="ButtonStyle2" TargetType="Button">
+            <Setter Property="Background" Value="{ThemeResource ButtonBackground}"/>
+            <Setter Property="BackgroundSizing" Value="OuterBorderEdge"/>
+            <Setter Property="Foreground" Value="{ThemeResource ButtonForeground}"/>
+            <Setter Property="BorderBrush" Value="{ThemeResource ButtonBorderBrush}"/>
+            <Setter Property="BorderThickness" Value="{ThemeResource ButtonBorderThemeThickness}"/>
+            <Setter Property="Padding" Value="{StaticResource ButtonPadding}"/>
+            <Setter Property="HorizontalAlignment" Value="Left"/>
+            <Setter Property="VerticalAlignment" Value="Center"/>
+            <Setter Property="FontFamily" Value="{ThemeResource ContentControlThemeFontFamily}"/>
+            <Setter Property="FontWeight" Value="Normal"/>
+            <Setter Property="FontSize" Value="{ThemeResource ControlContentThemeFontSize}"/>
+            <Setter Property="UseSystemFocusVisuals" Value="{StaticResource UseSystemFocusVisuals}"/>
+            <Setter Property="FocusVisualMargin" Value="-3"/>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="Button">
+                        <Grid Width="97" Height="79" RenderTransformOrigin="0,0" Margin="0,0,0,4">
+                            <Rectangle Height="79" Stroke="Black" Width="97" Fill="#FFB7A899" RadiusX="5" RadiusY="5" StrokeThickness="0.4" Margin="0,0,0,4"/>
+                            <ContentPresenter Width="95" Height="70" RenderTransformOrigin="0.5,0.5" Padding="13,19,13,20"/>
+                        </Grid>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
     </Page.Resources>
 
     <Grid>
         <Button x:Name="btn_Close" Content="X" Height="56" VerticalAlignment="Top" Width="85" FontSize="36" Padding="8,1,8,1" BorderBrush="Black" Margin="0,-7,0,0"/>
-        <Button Style="{StaticResource ButtonStyle1}" x:Name="btn_Shop" Content="X" Height="56" VerticalAlignment="Top" Width="85" FontSize="36" Padding="8,1,8,1" BorderBrush="Black" Margin="0,712,0,0"/>
+        <Button Style="{StaticResource ButtonStyle1}" x:Name="btn_Shop" Content="Shop" Height="56" VerticalAlignment="Top" Width="85" FontSize="24" Padding="8,1,8,1" BorderBrush="Black" Margin="0,714,0,0"/>
+        <Button Style="{StaticResource ButtonStyle1}" x:Name="btn_Bank" Content="Bank" Height="56" VerticalAlignment="Top" Width="85" FontSize="24" Padding="8,1,8,1" BorderBrush="Black" Margin="84,714,0,0"/>
+        <Button Style="{StaticResource ButtonStyle1}" x:Name="btn_Jobs" Content="Jobs" Height="56" VerticalAlignment="Top" Width="85" FontSize="24" Padding="8,1,8,1" BorderBrush="Black" Margin="168,714,0,0"/>
+        <Button Style="{StaticResource ButtonStyle1}" x:Name="btn_Item" Content="Items" Height="56" VerticalAlignment="Top" Width="85" FontSize="24" Padding="8,1,8,1" BorderBrush="Black" Margin="252,714,0,0"/>
+        <Button Style="{StaticResource ButtonStyle2}" x:Name="btn_Profile" Content="Profile" VerticalAlignment="Bottom" HorizontalAlignment="Right" FontSize="24" Width="96" Padding="0,0,0,0" Margin="0,0,0,-4" Height="79"/>
     </Grid>
 </Page>
